# camp-ctrl

./: .gitmodules  Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
hmi/: Cargo.toml  build.rs
hmi/c/: gui.c  gui.cpp  gui.h  gui.hpp  gui_conf.hpp  gui_ffi.h  styles.cpp  styles.hpp  tab_electrical.cpp  tab_electrical.hpp  tab_overview.cpp  tab_overview.hpp  tab_tanks.cpp  tab_tanks.hpp
hmi/c/widgets/: metric_card.cpp  metric_card.hpp  tank_vert.cpp  tank_vert.hpp
hmi/src/: ffi.rs  gui.rs  lib.rs  main.rs
lvgl/: Cargo.toml  LICENSE.md
lvgl-sys/: Cargo.toml  build.rs
lvgl-sys/conf/: lv_conf.h
lvgl-sys/shims/: lvgl_drv.h  lvgl_sys.h
lvgl-sys/src/: lib.rs
lvgl/src/: display.rs  error.rs  event.rs  input_device.rs  lib.rs  style.rs  text.rs  tick.rs
lvgl/src/layouts/: flex.rs  grid.rs  mod.rs
lvgl/src/misc/: area.rs  bidi.rs  color.rs  grad.rs  mod.rs  text.rs
lvgl/src/widgets/: base.rs  label.rs  mod.rs  obj.rs  tab_view.rs
ve-direct/: Cargo.toml
ve-direct/src/: hex.rs  lib.rs  parser.rs  register.rs  text.rs
